# ask.py

./: .env.tpl  .gitignore  LICENSE  README.md  ask.py  env.deepseek.tpl  env.ollama.tpl  env.tpl  pyproject.toml  requirements.txt
cursor/: cursor_update_repo_for_uv_virtual_envir.md
demos/: local_files.md  run_with_ollama.md  search_and_answer.md  search_and_extract.md  search_on_site_and_date.md
instructions/: extract_example.txt  links.txt
scripts/: draw_flow.py
