[project]
name = "ask-py"
version = "0.1.0"
description = "A Python program to implement the search-extract-summarize flow"
authors = [
    {name = "Peng Feng"}
]
dependencies = [
    "click==8.1.7",
    "requests==2.32.3",
    "numpy==1.26.4",
    "jinja2==3.1.3",
    "bs4==0.0.2",
    "python-dotenv==1.0.1",
    "openai==1.87.0",
    "duckdb==1.3.0",
    "gradio==5.34.0",
    "chonkie==1.0.10",
    "docling==2.36.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.rye]
managed = true
dev-dependencies = [] 